[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/light_toolbar.gd" type="Script" id=1]
[ext_resource path="res://ui/light_toolbar_root.gd" type="Script" id=2]
[ext_resource path="res://ui/selection_toolbar.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.196078, 0.243137, 0.270588, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.588235, 0.380392, 0.556863, 1 )

[sub_resource type="InputEventAction" id=2]
action = "toggle_selection"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[node name="light_toolbar_root" type="Control"]
anchor_right = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="light_toolbar" type="PanelContainer" parent="."]
anchor_right = 1.0
margin_left = 75.0
margin_top = 1.0
margin_bottom = 74.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="light_toolbar"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1198.0
margin_bottom = 66.0
custom_constants/hseparation = 20
columns = 8

[node name="label_tool" type="Label" parent="light_toolbar/GridContainer"]
margin_right = 69.0
margin_bottom = 14.0
text = "TOOL"

[node name="label_col_lmb" type="Label" parent="light_toolbar/GridContainer"]
margin_left = 89.0
margin_right = 117.0
margin_bottom = 14.0
text = "LMB"

[node name="label_col_rmb" type="Label" parent="light_toolbar/GridContainer"]
margin_left = 137.0
margin_right = 166.0
margin_bottom = 14.0
text = "RMB"

[node name="label_brush_size" type="Label" parent="light_toolbar/GridContainer"]
margin_left = 186.0
margin_right = 261.0
margin_bottom = 14.0
text = "BRUSH SIZE"

[node name="label_falloff" type="Label" parent="light_toolbar/GridContainer"]
margin_left = 281.0
margin_right = 362.0
margin_bottom = 14.0
text = "FALLOFF"

[node name="label_mix" type="Label" parent="light_toolbar/GridContainer"]
margin_left = 382.0
margin_right = 477.0
margin_bottom = 14.0
text = "MIX STRENGTH"

[node name="label_preview" type="Label" parent="light_toolbar/GridContainer"]
margin_left = 497.0
margin_right = 573.0
margin_bottom = 14.0
text = "SHOW TRIS"

[node name="label_selection" type="Label" parent="light_toolbar/GridContainer"]
margin_left = 593.0
margin_right = 707.0
margin_bottom = 14.0
text = "SHOW SELECTION"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tool_select" type="OptionButton" parent="light_toolbar/GridContainer"]
margin_top = 18.0
margin_right = 69.0
margin_bottom = 58.0
text = "DRAW"
items = [ "DRAW", null, false, 0, null, "RECT", null, false, 1, null, "BLUR", null, false, 2, null, "FILL", null, false, 3, null, "GRAD", null, false, 4, null, "DRAG", null, false, 5, null ]
selected = 0

[node name="col_lmb" type="ColorPickerButton" parent="light_toolbar/GridContainer"]
margin_left = 89.0
margin_top = 18.0
margin_right = 117.0
margin_bottom = 58.0
color = Color( 0.176471, 0.109804, 0.309804, 1 )
edit_alpha = false

[node name="col_rmb" type="ColorPickerButton" parent="light_toolbar/GridContainer"]
margin_left = 137.0
margin_top = 18.0
margin_right = 166.0
margin_bottom = 58.0
size_flags_vertical = 5
color = Color( 1, 1, 1, 1 )
edit_alpha = false

[node name="radius_select" type="SpinBox" parent="light_toolbar/GridContainer"]
margin_left = 186.0
margin_top = 18.0
margin_right = 261.0
margin_bottom = 58.0
min_value = 16.0
max_value = 320.0
step = 8.0
value = 32.0

[node name="falloff_select" type="OptionButton" parent="light_toolbar/GridContainer"]
margin_left = 281.0
margin_top = 18.0
margin_right = 362.0
margin_bottom = 58.0
text = "SQUARE"
items = [ "CONST", null, false, 0, null, "LINEAR", null, false, 1, null, "SQUARE", null, false, 2, null ]
selected = 2

[node name="mix_strength" type="HSlider" parent="light_toolbar/GridContainer"]
margin_left = 382.0
margin_top = 18.0
margin_right = 477.0
margin_bottom = 58.0
size_flags_vertical = 5
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.1
exp_edit = true
tick_count = 5
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_tris" type="CheckButton" parent="light_toolbar/GridContainer"]
margin_left = 497.0
margin_top = 18.0
margin_right = 573.0
margin_bottom = 58.0

[node name="btn_selection" type="CheckButton" parent="light_toolbar/GridContainer"]
margin_left = 612.0
margin_top = 18.0
margin_right = 688.0
margin_bottom = 58.0
grow_horizontal = 0
size_flags_horizontal = 4
pressed = true

[node name="selection_toolbar" type="PanelContainer" parent="."]
visible = false
anchor_right = 1.0
margin_left = 75.0
margin_top = 1.0
margin_bottom = 76.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="selection_toolbar"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1198.0
margin_bottom = 68.0
custom_constants/hseparation = 20
columns = 3

[node name="label_tool" type="Label" parent="selection_toolbar/GridContainer"]
margin_right = 70.0
margin_bottom = 14.0
text = "TOOL"

[node name="label_clearselection" type="Label" parent="selection_toolbar/GridContainer"]
margin_left = 90.0
margin_right = 214.0
margin_bottom = 14.0

[node name="label_invert" type="Label" parent="selection_toolbar/GridContainer"]
margin_left = 234.0
margin_right = 291.0
margin_bottom = 14.0

[node name="tool_select" type="OptionButton" parent="selection_toolbar/GridContainer"]
margin_top = 18.0
margin_right = 70.0
margin_bottom = 61.0
size_flags_vertical = 3
text = "LASSO"
items = [ "LASSO", null, false, 0, null, "RECT", null, false, 1, null, "GRAB", null, false, 2, null ]
selected = 0

[node name="btn_clear" type="Button" parent="selection_toolbar/GridContainer"]
margin_left = 90.0
margin_top = 18.0
margin_right = 214.0
margin_bottom = 61.0
text = "CLEAR SELECTION"

[node name="btn_invert" type="Button" parent="selection_toolbar/GridContainer"]
margin_left = 234.0
margin_top = 18.0
margin_right = 291.0
margin_bottom = 61.0
toggle_mode = true
text = "INVERT"

[node name="selection_toggle_panel" type="Panel" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 75.0
margin_bottom = 73.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="selection_toggle_panel"]
margin_left = 1.0
margin_top = 3.0
margin_right = 70.0
margin_bottom = 34.0
text = "SELECTION
MODE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="selection_toggle_panel"]
margin_left = -2.12923
margin_top = 29.3742
margin_right = 73.8708
margin_bottom = 69.3742
shortcut = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="draw_param_changed" from="light_toolbar" to="." method="on_edit_toolbar_draw_param_changed"]
[connection signal="item_selected" from="light_toolbar/GridContainer/tool_select" to="light_toolbar" method="on_tool_change"]
[connection signal="color_changed" from="light_toolbar/GridContainer/col_lmb" to="light_toolbar" method="on_col_lmb_change"]
[connection signal="popup_closed" from="light_toolbar/GridContainer/col_lmb" to="light_toolbar" method="on_col_lmb_popup_closed"]
[connection signal="color_changed" from="light_toolbar/GridContainer/col_rmb" to="light_toolbar" method="on_col_rmb_change"]
[connection signal="popup_closed" from="light_toolbar/GridContainer/col_rmb" to="light_toolbar" method="on_col_rmb_popup_closed"]
[connection signal="value_changed" from="light_toolbar/GridContainer/radius_select" to="light_toolbar" method="on_radius_change"]
[connection signal="item_selected" from="light_toolbar/GridContainer/falloff_select" to="light_toolbar" method="on_falloff_change"]
[connection signal="value_changed" from="light_toolbar/GridContainer/mix_strength" to="light_toolbar" method="on_mix_change"]
[connection signal="toggled" from="light_toolbar/GridContainer/btn_tris" to="light_toolbar" method="on_show_tris_change"]
[connection signal="toggled" from="light_toolbar/GridContainer/btn_selection" to="light_toolbar" method="on_show_selection_change"]
[connection signal="request_selection_clear" from="selection_toolbar" to="." method="on_request_selection_clear"]
[connection signal="selection_param_changed" from="selection_toolbar" to="." method="on_selection_param_changed"]
[connection signal="item_selected" from="selection_toolbar/GridContainer/tool_select" to="selection_toolbar" method="on_tool_select"]
[connection signal="pressed" from="selection_toolbar/GridContainer/btn_clear" to="selection_toolbar" method="on_clear_pressed"]
[connection signal="toggled" from="selection_toolbar/GridContainer/btn_invert" to="selection_toolbar" method="on_invert_selection"]
[connection signal="toggled" from="selection_toggle_panel/CheckButton" to="." method="on_selection_mode_toggle"]
